# docs/swagger.json
@@ -252,6 +252,31 @@
                 }
             }
         },
+        "/user/googleSignIn": {
+            "post": {
+                "tags": [
+                    "用戶資料"
+                ],
+                "summary": "google登入",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "idToken",
+                        "name": "idToken",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/updateUser": {
             "post": {
                 "security": [
